force-app/main/default/objects/Lead/fields/Besoin_specifique__c.field-meta.xml
<CustomField>
    <fullName>Besoin_specifique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Besoin specifique</label>
    <type>Checkbox</type>
</CustomField>