force-app/main/default/objects/Lead/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <label>Formation</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formation</valueSetName>
    </valueSet>
</CustomField>