force-app/main/default/objects/Lead/fields/N_Siret__c.field-meta.xml
<CustomField>
    <fullName>N_Siret__c</fullName>
    <label>N° Siret</label>
    <precision>14</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>