force-app/main/default/objects/Lead/fields/Raison__c.field-meta.xml
<CustomField>
    <fullName>Raison__c</fullName>
    <label>Raison social</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>